add export vf + new map asset +media player
 connexion avec popup & nopopup

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9E05B58A408DEC1E2EBF8E8743593099
+bShouldWindowPreserveAspectRatio=True
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 Build=IfProjectHasCode
