--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -194,7 +194,7 @@ CommandletClass=Class'/Script/UnrealEd.WorldPartitionConvertCommandlet'
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
 HardwareCursors=()
-SoftwareCursors=((Crosshairs, "/Game/WBP/WBP_souris.WBP_souris_C"),(Hand, "/Game/WBP/WBP_sourisclikable.WBP_sourisclikable_C"))
+SoftwareCursors=((Default, "/Game/WBP/WBP_souris.WBP_souris_C"),(Hand, "/Game/WBP/WBP_sourisclikable.WBP_sourisclikable_C"))
 ApplicationScale=1.000000
 UIScaleRule=ShortestSide
 CustomScalingRuleClass=None
